# SynTools

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
lib/: miniscl.hpp
src/: AssetPackager.cpp  AssetPackager.hpp  ShaderCompiler.cpp  ShaderCompiler.hpp  main.cpp
